--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
+    "joi": "^17.12.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.1",
     "slugify": "^1.6.6"
